# eedi-misconception-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  RUNNING.md  docker-compose.yml  note.md  pyproject.toml
.github/workflows/: ci.yml  deploy-space.yml
configs/: base.yaml
docs/: TRAINING.md  interview_guide.md
eval/: __init__.py  evaluator.py
mcp_server/: server.py
prompts/listwise/: v1.jinja
prompts/reasoner/: v1.jinja  v2.jinja
scripts/: 00_eda.py  00_prepare_data.py  01_retriever_baseline.py  02_synth_data.py  03_reranker_train.py  04_grpo_train.py  05_build_index.py  build_index.py  demo_share.py  download_adapters.sh  download_final_models.sh  eda.py  fix_space_github_url.py  generate_cot.py  grpo_listwise.py  listwise_rerank.py  listwise_sft.py  prepare_data.py  rerank_scores.py  reranker_ensemble.py  reranker_pointwise_train.py  reranker_zeroshot_eval.py  retriever_baseline.py  retriever_multistage.py  score_scaling.py  smoke_service.py  spaces_precompute.py  synth_data.py  trackio_log.py  unseen_eval.py
service/: app.py
spaces/: README.md  app.py  misconception_ids.json  misconceptions.txt  requirements.txt
src/eedi/: orchestrator.py
src/eedi/data/: __init__.py  collator.py  dataset.py
src/eedi/memory/: __init__.py  memory.py
src/eedi/reasoner/: __init__.py  reasoner.py
src/eedi/reranker/: __init__.py  grpo_trainer.py  listwise.py  pointwise.py
src/eedi/retriever/: __init__.py  retriever.py  st_engine.py
src/eedi/router/: __init__.py  router.py
src/eedi/synth/: __init__.py  synth.py
tests/: conftest.py  test_evaluator.py  test_listwise.py  test_router.py
