[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eedi-misconception-engine"
version = "0.1.0"
description = "End-to-end math misconception retrieval & diagnosis system (Eedi Kaggle × Enterprise Middle-Control)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["nlp", "retrieval", "reranking", "education-ai", "qwen", "lora", "grpo"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "peft>=0.14.0",
    "accelerate>=1.0.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "FlagEmbedding>=1.3.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.7.4",
    "bitsandbytes>=0.43.0",
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "gradio>=4.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",
    "aiosqlite>=0.20.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "trackio>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
]
vllm = ["vllm>=0.6.0"]

[project.scripts]
eedi-serve = "service.app:main"
eedi-eval  = "eval.evaluator:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eedi"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# ML 约定豁免：N806/N812（torch as F、D/I 等）、E741（faiss D,I）、E501（长行）
ignore = ["E501", "N806", "N812", "E741"]

[tool.ruff.lint.per-file-ignores]
# 脚本用 sys.path.insert 后再 import（E402），允许
"scripts/*.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
